# ChangeLog for sys-fs/e2fsprogs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.305 2015/02/16 18:13:56 zlogene Exp $

  16 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> e2fsprogs-1.42.12.ebuild:
  alpha/ia64 stable wrt bug #538930

  16 Feb 2015; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.12.ebuild:
  Stable for sparc, wrt bug #538930

  10 Feb 2015; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.12.ebuild:
  Stable for x86, wrt bug #538930

  10 Feb 2015; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.12.ebuild:
  Stable for amd64, wrt bug #538930

  09 Feb 2015; Anthony G. Basile <blueness@gentoo.org> e2fsprogs-1.42.12.ebuild:
  Stable on arm, bug #538930.

  09 Feb 2015; Anthony G. Basile <blueness@gentoo.org> e2fsprogs-1.42.12.ebuild:
  Stable for ppc/ppc64, bug #538930.

  06 Feb 2015; Jeroen Roovers <jer@gentoo.org> e2fsprogs-1.42.12.ebuild:
  Stable for HPPA (bug #538930).

  27 Oct 2014; Mike Frysinger <vapier@gentoo.org> e2fsprogs-1.42.10.ebuild:
  Mark s390/sh/m68k stable.

  09 Sep 2014; Jack Morgan <jmorgan@gentoo.org> e2fsprogs-1.42.10.ebuild:
  sparc stable for bz512012

*e2fsprogs-1.42.12 (05 Sep 2014)

  05 Sep 2014; Lars Wendler <polynomial-c@gentoo.org>
  +e2fsprogs-1.42.12.ebuild:
  Version bump.

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.10.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.10.ebuild:
  Stable for ppc64, wrt bug #512012

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> e2fsprogs-1.42.10.ebuild:
  Stable for HPPA (bug #512012).

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> e2fsprogs-1.42.10.ebuild,
  e2fsprogs-1.42.11.ebuild:
  Get tests building again.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org>
  +files/e2fsprogs-1.42.11-prototypes.patch, e2fsprogs-1.42.10.ebuild,
  e2fsprogs-1.42.11.ebuild: