@@ -1,4 +1,4 @@
-DEFINED_PHASES=compile configure install preinst prepare
+DEFINED_PHASES=compile configure install prepare
 DEPEND=~sys-libs/e2fsprogs-libs-1.42.11 >=sys-apps/util-linux-2.16 nls? ( virtual/libintl ) nls? ( sys-devel/gettext ) virtual/pkgconfig sys-apps/texinfo !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Standard EXT2/EXT3/EXT4 filesystem utilities
 EAPI=4
@@ -10,4 +10,4 @@ RDEPEND=~sys-libs/e2fsprogs-libs-1.42.11 >=sys-apps/util-linux-2.16 nls? ( virtu
 SLOT=0
 SRC_URI=mirror://sourceforge/e2fsprogs/e2fsprogs-1.42.11.tar.gz elibc_mintlib? ( mirror://gentoo/e2fsprogs-1.42.9-mint-r1.patch.xz )
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=9ef81018b43c45fae31074ba54cdae65
+_md5_=ea0bbaf9197fedeaebad08b735ece6a0
